# chat-final

./: CMakeLists.txt  Chat.cpp  Chat.h  Messaggio.cpp  Messaggio.h  Registro_Chat.cpp  Registro_Chat.h  Utente.cpp  Utente.h  main.cpp
Test_Progetto/: CMakeLists.txt  Chat_Test.cpp  Messaggio_Test.cpp  Registro_Chat_Test.cpp  Utente_Test.cpp  runAllTests.cpp
